<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_2sdp">

        <!-- date -->
        <TextView
            android:id="@+id/tv_title_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_date"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tue, 10 Mar 2021" />

        <!-- date end -->

        <!-- Average temperature-->
        <TextView
            android:id="@+id/tv_title_average_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_average_temperature"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/tv_average_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_average_temp"
            app:layout_constraintTop_toTopOf="@+id/tv_title_average_temp"
            tools:text="31°C" />
        <!-- Average temperature end-->

        <!-- Pressure -->
        <TextView
            android:id="@+id/tv_title_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_pressure"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_average_temp"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_pressure"
            app:layout_constraintTop_toTopOf="@+id/tv_title_pressure"
            tools:text="1031" />
        <!-- Pressure end-->

        <!-- Humidity -->
        <TextView
            android:id="@+id/tv_title_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_humidity"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_pressure"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_humidity"
            app:layout_constraintTop_toTopOf="@+id/tv_title_humidity"
            tools:text="70%" />
        <!-- Humidity end-->

        <!-- Description -->
        <TextView
            android:id="@+id/tv_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_description"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_humidity"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_description"
            app:layout_constraintTop_toTopOf="@+id/tv_title_description"
            tools:text="light rain" />
        <!-- Description end-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>